# lfu_cache

./: CMakeLists.txt  README.md  lfu.ans  perfect.ans  test.ans  test.sh  test_generator.ipynb  tests.txt
include/: cache.hpp
src/: cache.cc
